--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
 			            <h2>Web Solution Explorers</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="elitecreations310@gmail.com"class="btn btn-primary py-3 px-4">Gmail</a> 
-							</p>
+			            <!-- <p><a href="elitecreations310@gmail.com"class="btn btn-primary py-3 px-4">Gmail</a> 
+							</p> -->
 		            </div>
 		          </div>
 	        	</div>
@@ -219,10 +219,10 @@
 									<!-- Details next to profile image -->
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
-										<p><span class="title-s">Founders: </span> <span>Dev Pandey and Tanmay Singh
-                                          
+										<p><span class="title-s">Founder: </span> <span>Dev Pandey
+                                                
 										</span></p>
-										<!-- <p><span class="title-s">Job Role: </span> <span> Data Analyst</span></p> -->
+										<p><span class="title-s">Co-Founder: </span> <span> Tanmay Singh </span></p>
 										<p><span class="title-s">Experience: </span> <span>2 Years 7 Months</span></p>
 										<p><span class="title-s">Address: </span> <span>Kerala, India</span></p>
 									  </div>
